objects/EFPIO__StateData__c.object
<CustomObject>
    <description>Orchestration Event State Data</description>
    <fields>
        <fullName>EFPIO__IsEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event State Data Encrypted Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFPIO__Key__c</fullName>
        <description>Key of this Event State Data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EFPIO__TTL__c</fullName>
        <description>Time to live for this event state data</description>
        <label>Time to Live</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFPIO__Timestamp__c</fullName>
        <label>Timestamp</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Orchestration Event State Data</label>
    <nameField>
        <displayFormat>ESD-{0000}</displayFormat>
        <label>Event State Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestration Event State Datum</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>